examples/test/testpolicy5822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5822
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key20: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value49
      podSelector:
        matchLabels:
          key19: value42
          key10: value1
          key48: value24
